endpoints: Create dummy ecommerce endpoints.
